# pneumonia-xai

./: .gitignore  README.md  main.py  pyproject.toml  run_experiment.py
experiments/results/: lightcxr_best.pth  results_summary.csv
experiments/results/efficientnet_b0/: efficientnet_b0_benchmark.json  efficientnet_b0_history.json  efficientnet_b0_metrics.json
experiments/results/lightcxr/: lightcxr_benchmark.json  lightcxr_best.pth  lightcxr_history.json  lightcxr_metrics.json
experiments/results/mobilenetv2/: mobilenetv2_benchmark.json  mobilenetv2_history.json  mobilenetv2_metrics.json
notebooks/: analysis.ipynb
src/data/: dataset.py  splitter.py  transforms.py
src/evaluation/: benchmark.py  metrics.py
src/models/: base.py  custom_cnn.py  efficientnet.py  mobilenet.py  resnet.py
src/training/: trainer.py
src/xai/: gradcam.py
